<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnduran.p2formulario.MainActivity"
    android:orientation="vertical"
    android:background="@color/lavender"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:background="@color/steelblue"
            android:textColor="@color/yellow"
            android:textSize="25sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/usuario"
                android:textColor="@color/steelblue"
                android:textSize="25sp"
                android:id="@+id/tUsuario"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/husuario"
                android:inputType="textPersonName"
                android:layout_gravity="center_vertical"
                android:textColor="@color/goldenrod"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:id="@+id/eUsuario"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textColor="@color/steelblue"
                android:textSize="25sp"
                android:id="@+id/tPassword"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hpassword"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"
                android:textColor="@color/goldenrod"
                android:textColorHint="@color/gray"
                android:id="@+id/ePassword"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password2"
                android:textColor="@color/steelblue"
                android:textSize="25sp"
                android:id="@+id/tPassword2"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hpassword"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"
                android:textColor="@color/goldenrod"
                android:textColorHint="@color/gray"
                android:id="@+id/ePassword2"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textColor="@color/steelblue"
                android:textSize="25sp"
                android:id="@+id/tEmail"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hemail"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_vertical"
                android:textColor="@color/goldenrod"
                android:textColorHint="@color/gray"
                android:id="@+id/eEmail"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sexo"
                android:textColor="@color/steelblue"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/rMasculino"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textColor="@color/steelblue"
                    android:checked="true"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:id="@+id/rFemenino"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:textColor="@color/steelblue"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:id="@+id/rOtro"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/otro"
                    android:textColor="@color/steelblue"
                    android:theme="@style/MyRadioButton"
                    />

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Ciudad"
                android:textColor="@color/steelblue"
                android:textSize="25sp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sCiudades"
                android:textColor="@color/gray"
                android:background="@color/colorPrimary"
                >

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hobbies"
                    android:textColor="@color/steelblue"
                    android:textSize="25sp"
                    android:id="@+id/tHobbies"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"
                    android:textColor="@color/steelblue"
                    android:id="@+id/cCine"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comer"
                    android:textColor="@color/steelblue"
                    android:id="@+id/cComer"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bailar"
                    android:textColor="@color/steelblue"
                    android:id="@+id/cBailar"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/steelblue"
                    android:text="@string/deporte"
                    android:id="@+id/cDeporte"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dormir"
                    android:textColor="@color/steelblue"
                    android:id="@+id/cDormir"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viajar"
                    android:textColor="@color/steelblue"
                    android:id="@+id/cViajar"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <Button
                android:id="@+id/bFecha"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:background="@color/steelblue"
                android:textColor="@color/colorPrimary"
                android:onClick="fFecha" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@color/yellow"
                android:text="--/--/--"
                android:textSize="22dp"
                android:textColor="@color/steelblue"
                android:id="@+id/tFecha"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:id="@+id/bAceptar"
                android:layout_marginLeft="115dp"
                android:layout_marginRight="115dp"
                android:gravity="center"
                android:onClick="fAceptar"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/tInfoError"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/steelblue"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:gravity="center_horizontal"
            android:id="@+id/tInfo"
            />
    </LinearLayout>

</ScrollView>
